--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <title>Analog Clock</title>
 </head>
 
 <body style="margin: 0; padding: 0;">
